# jump_ml

./: .gitignore  train.py  train_multioutput.py
jump_ga/: best_ind.py
jump_ga/env_ga/: multi_env.py  physics_world.py  reward_eval.py  reward_wrapper.py  robot_model_ga.py  switch_rule.py
jump_ga/ga/: genetic_algorithm.py  individual.py
jump_model/: hopper.urdf  xyz.urdf
jump_modular_env/: __init__.py  disturbance.py  jump_env.py  jump_model.py  logger.py  ml_wrapper.py  ml_wrapper_v2.py  model_matrices.py  physics_engine.py  reward_wrapper.py  state_normalizer.py  state_normalizer_v2.py  test_env.py
rgc_controller/: CMakeLists.txt
rgc_controller/config/: config.yaml
rgc_controller/include/rgc_controller/: model_matrices.h  op_wrapper.h  opt_problem.h  opt_problem0.h  opt_problem1.h  opt_problem2.h  opt_problem3.h  opt_problem4.h  opt_problem5.h  opt_problem6.h  opt_problem7.h  pred_control.h
rgc_controller/src/: model_matrices.cpp  op_wrapper.cpp  opt_problem.cpp  opt_problem0.cpp  opt_problem1.cpp  opt_problem2.cpp  opt_problem3.cpp  opt_problem4.cpp  opt_problem5.cpp  opt_problem6.cpp  opt_problem7.cpp  pred_control.cpp  pybind_opWrapper.cpp
rl_training/: logger_callback.py
rl_training/agents/: multi_output_sac.py  multi_sac_agent.py  ppo_agent.py  sac_agent.py
rl_training/configs/: cnn3h_config.yaml  multihead_config.yaml  ppo_config.yaml  sac_config.yaml
rl_training/policies/: cnn3h_feature_extractor.py  cnn3h_policy.py  cnn_ltsm_head.py  cnn_policy.py  cnn_sac_policy.py  mlp_policy.py  multi_head_extractor.py  (+2 more)
stagnation_classifier/: analyze_episode.py  cnn_stagnation_wrapper.py  data_logger.py  dataset.py  diag.py  energy_test.py  models.py  plot_episode_data.py  train_classifier.py  user_analyze_episode.py  validate_model.py
test_agents/: test_agent.py
validate_mpc/: logger.py  validate_mpc.py
(+52 files in other folders)
